# ac-local-swift

./: CMakeLists.txt  README.md
code/: AlpacaCore.cpp  AlpacaCore.hpp  CMakeLists.txt  ModelDesc.swift  SwiftApi.swift
example/: CMakeLists.txt  ac-example-data-swift.cpp  ac-example-data-swift.hpp  e-Dummy.swift  e-Whisper.swift  module.modulemap
test/: CMakeLists.txt  t-SwiftApi.swift
